--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
-    "hbs": "^4.0.2"
+    "hbs": "^4.0.2",
+    "mongoose": "^5.4.14"
   }
 }
